unpackaged/main/default/objects/Cobuyer__c/Cobuyer__c.object-meta.xml
<CustomObject>
    <label>Cobuyer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cobuyers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>