unpackaged/main/default/objects/Cobuyer__c/fields/Interest_List__c.field-meta.xml
<CustomField>
        <fullName>Interest_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest List</label>
        <referenceTo>Interest_List__c</referenceTo>
        <relationshipLabel>Cobuyers</relationshipLabel>
        <relationshipName>Cobuyers</relationshipName>
        <type>Lookup</type>
    </CustomField>