unpackaged/main/default/objects/Cobuyer__c/fields/Last_Name__c.field-meta.xml
<CustomField>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>