unpackaged/main/default/objects/Cobuyer__c/fields/Newstar_ID__c.field-meta.xml
<CustomField>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>