unpackaged/main/default/objects/Cobuyer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cobuyers</relationshipLabel>
        <relationshipName>Cobuyers</relationshipName>
        <type>Lookup</type>
    </CustomField>