unpackaged/main/default/objects/Cobuyer__c/recordTypes/Interest_List.recordType-meta.xml
<RecordType>
        <fullName>Interest_List</fullName>
        <active>true</active>
        <label>Interest List</label>
    </RecordType>