unpackaged/main/default/objects/Cobuyer__c/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <label>Opportunity</label>
    </RecordType>