unpackaged/main/default/objects/Cobuyer__c/listViews/DC_Admirals_Square_Cobuyer.listView-meta.xml
<ListView>
        <fullName>DC_Admirals_Square_Cobuyer</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Admirals Square</label>
        <queue>DC_Admirals_Square</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>