unpackaged/main/default/objects/Cobuyer__c/listViews/DC_Avendale_Cobuyer.listView-meta.xml
<ListView>
        <fullName>DC_Avendale_Cobuyer</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Avendale</label>
        <queue>DC_Avendale</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>