unpackaged/main/default/objects/Cobuyer__c/listViews/DC_Liberty_Cobuyer.listView-meta.xml
<ListView>
        <fullName>DC_Liberty_Cobuyer</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Liberty</label>
        <queue>DC_Liberty</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>