unpackaged/main/default/objects/Cobuyer__c/listViews/DC_Oakview_Village_Cobuyer.listView-meta.xml
<ListView>
        <fullName>DC_Oakview_Village_Cobuyer</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Oakview Village</label>
        <queue>DC_Oakview_Village</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>