unpackaged/main/default/objects/Cobuyer__c/listViews/DC_Ridgeview_Cobuyer.listView-meta.xml
<ListView>
        <fullName>DC_Ridgeview_Cobuyer</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Ridgeview</label>
        <queue>DC_Ridgeview</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>