unpackaged/main/default/objects/Cobuyer__c/listViews/DC_Snowden_Bridge_Townhomes_Cobuyer.listView-meta.xml
<ListView>
        <fullName>DC_Snowden_Bridge_Townhomes_Cobuyer</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Snowden Bridge Townhomes</label>
        <queue>DC_Snowden_Bridge_Townhomes</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>