unpackaged/main/default/objects/Cobuyer__c/listViews/DC_Travilah_Station_Cobuyer.listView-meta.xml
<ListView>
        <fullName>DC_Travilah_Station_Cobuyer</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Travilah Station</label>
        <queue>DC_Travilah_Station</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>