unpackaged/main/default/objects/Cobuyer__c/listViews/DC_Waterford_Manor_Cobuyer.listView-meta.xml
<ListView>
        <fullName>DC_Waterford_Manor_Cobuyer</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Waterford Manor</label>
        <queue>DC_Waterford_Manor</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>